--- a/src/assets/css/activeform.css
+++ b/src/assets/css/activeform.css
@@ -205,6 +205,7 @@ label.disabled, label.readonly, .disabled label, .readonly label {
     display: block;
 }
 .kv-form-bs4 .hint-block {
+    padding: 0.75rem;
     font-size: 0.75rem;
     margin-top: 0.375rem;
     color: #999;
